kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: code-server-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: code-server
  template:
    metadata:
      labels:
        app: code-server
    spec:
      securityContext:
        fsGroup: 1000
      containers:
      - name: code-server
        image: localhost:32000/code-server
        securityContext:
          privileged: true
          runAsGroup: 1000
          runAsUser: 1000
        volumeMounts:
        - name: data-pvc
          mountPath: /home/beyond
        - name: docker-sock
          mountPath: /var/run/
        - name: docker-directory
          mountPath: /var/lib/docker
      volumes:
      - name: data-pvc
        persistentVolumeClaim:
          claimName: data-pvc
      - name: docker-sock
        hostPath:
          path: /var/run/
      - name: docker-directory
        hostPath:
          path: /var/lib/docker
