kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: code-server-svc
spec:
  ports:
  - name: http
    targetPort: 8080
    port: 80
  selector:
    app: code-server
